--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.7.0",
     "aos": "^2.3.4",
     "astro": "^4.11.5",
+    "classnames": "^2.5.1",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
